added calculateRemXP function + updated styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="flex flex-col align-middle justify-center items-center">
       <div
-        class="sm:w-4/5 w-screen mt-3 flex flex-row justify-center gap-2 items-center"
+        class="w-screen mt-3 flex flex-row justify-center gap-2 items-center"
       >
         <div class="scale-150 flex">👉</div>
         <div class="font-bold w-28 text-end">Current Level</div>
@@ -30,9 +30,7 @@
           id="currentLevel"
         />
       </div>
-      <div
-        class="sm:w-4/5 mt-3 flex flex-row justify-center gap-2 items-center"
-      >
+      <div class="mt-3 flex flex-row justify-center gap-2 items-center">
         <div class="scale-150 flex">🎯</div>
         <div class="font-bold w-28 text-end">Target Level</div>
         <input
@@ -41,11 +39,9 @@
           id="targetLevel"
         />
       </div>
-      <div
-        class="sm:w-4/5 mt-3 flex flex-row justify-center gap-2 items-center"
-      >
+      <div class="mt-3 flex flex-row justify-center gap-2 items-center">
         <div class="scale-150 flex">💪</div>
-        <div class="font-bold w-28 text-end">Remaining XP</div>
+        <div class="font-bold w-28 text-end">Remaining:</div>
         <p
           id="remainingXP"
           class="w-20 rounded-md border-solid font-bold text-center"
@@ -53,12 +49,12 @@
           123
         </p>
       </div>
-      <button
+      <!-- <button
         id="calculateBtn"
         class="border-none bg-gray-600 p-1 px-2 text-white rounded-md mt-3"
       >
         Calculate
-      </button>
+      </button> -->
     </div>
     <script src="scripts/script.js"></script>
   </body>
